--- a/_posts/2023-01-23-CICD-.md
+++ b/_posts/2023-01-23-CICD-.md
@@ -18,13 +18,13 @@ CI/CD 구성을 위한 사전 지식
 
 브랜치 별 파이프라인 동작을 설정하기 위해 Jenkinsfile에 조건부 논리를 추가할 수 있습니다.
 예를 들어 개발자가 작업하는 브랜치에서 단위 테스트 및 정적 분석만 실행하도록 하려면 아래와 같이 when 조건으로 건너뛰는 조건을 가질 수 있습니다.
-![img_23.png](./images/cicd/img_23.png)  
+![img_23.png](/assets/images/cicd/img_23.png)  
 
 ### 1.2. Github flow 전략
 소스 저장소의 관리(개발) 전략에 따라 젠킨스의 구성이 달라질 수 있다. 
 이 문서에서는 GitHub Flow를 추천하며 GitHub Flow에 대해서 설명한다.  
 ( 브랜치 이름 : Master == Main )
-![img_26.png](./images/cicd/img_26.png)  
+![img_26.png](/assets/images/cicd/img_26.png)  
 * Git Flow도 좋은 방식이지만 복잡하다는 Scott Chacon의 판단에 따라 만들어진 새로운 관리 방식  
 * Git Flow에 비해 흐름이 단순해짐에 따라 그 규칙도 단순  
 * Main Branch에 대한 규칙만 정확하게 정립되어 있다면 나머지 Branch에 대해서는 특별한 관여를 하지 않으며
@@ -36,7 +36,7 @@ CI/CD 구성을 위한 사전 지식
 
 #### **흐름**  
 1. 브랜치 생성  
-![img_27.png](./images/cicd/img_27.png)  
+![img_27.png](/assets/images/cicd/img_27.png)  
 
 Github-flow 전략은 기능 개발, 버그 픽스 등 어떤 이유로든 **새로운 브랜치를 생성**하는 것으로 시작된다.
 **브랜치 이름을 통해 의도를 명확하게** 드러내는 것이 매우 중요하다. 
@@ -46,14 +46,14 @@ Github-flow 전략은 기능 개발, 버그 픽스 등 어떤 이유로든 **새
 * 브랜치 이름은 지라 이슈 이름(IRIS-1234)을 사용한다  
 
 2. 커밋 & 푸쉬 
-![img_28.png](./images/cicd/img_28.png)  
+![img_28.png](/assets/images/cicd/img_28.png)  
 **커밋 시 메시지를 최대한 상세하게** 적어주는 것이 중요하다.  
 * 메시지를 명확하게 작성  
 * 수시로 원격지(GitHub)으로 업로드(Push)  
   자신이 하고 있는 일들을 올려 다른 사람들도 확인할 수 있도록 해준다  
 
 3. PR(Pull Request) 생성  
-![img_29.png](./images/cicd/img_29.png)  
+![img_29.png](/assets/images/cicd/img_29.png)  
 피드백이나 도움이 필요할 때, 그리고 소스를 머지할 준비가 완료되었을 때는 풀리퀘스트를 생성한다.  
 * 풀리퀘스트는 코드 리뷰를 도와주는 시스템
 * 자신의 코드를 공유하고, 리뷰 받는다  
@@ -76,11 +76,11 @@ GitHub - Jenkins 간 연동을 위한 설정에 대해서 설명한다.
 
 ### 1.1. Create GitHub App  
 1. 프로파일 아이콘 > 설정(Settings)  
-![img_1.png](./images/cicd/img_1.png)  
+![img_1.png](/assets/images/cicd/img_1.png)  
 2. 왼쪽 창 : Developer Settings > GitHub Apps  
-![img_2.png](./images/cicd/img_2.png)   
+![img_2.png](/assets/images/cicd/img_2.png)   
 3. New GitHub App 선택   
-![img_3.png](./images/cicd/img_3.png)  
+![img_3.png](/assets/images/cicd/img_3.png)  
 4. 다음 항목들을 작성 
     * GitHub App Name: 이 App을 위한 이름( jenkins-platform )
     * Homepage URL: 회사 도메인 혹은 github.com 저장소 URL  
@@ -88,7 +88,7 @@ GitHub - Jenkins 간 연동을 위한 설정에 대해서 설명한다.
 5. Identifying and authorizing users section은 설정할 필요 없음  
 6. Permissions : 권한 설정  
     * Repository permissions : 저장소 권한  
-        ![img_4.png](./images/cicd/img_4.png)  
+        ![img_4.png](/assets/images/cicd/img_4.png)  
         * Administration: Read-only  
         * Checks: Read & write  
         * Contents: Read-only (to read the Jenkinsfile and the repository content during git fetch).  
@@ -104,21 +104,21 @@ GitHub - Jenkins 간 연동을 위한 설정에 대해서 설명한다.
     * Pull request  
     * Push  
     * Repository  
-    ![img_7.png](./images/cicd/img_7.png)  
+    ![img_7.png](/assets/images/cicd/img_7.png)  
 8. 사용 범위를 정하고 생성을 선택  
-    ![img_8.png](./images/cicd/img_8.png)  
+    ![img_8.png](/assets/images/cicd/img_8.png)  
 9. 화면 상단의 버튼(generate a private key) 클릭하여 다음 섹션'인증키 생성' 과정 1-3을 생략할 수 있다. 
-    ![img_9.png](./images/cicd/img_9.png)
+    ![img_9.png](/assets/images/cicd/img_9.png)
 
 ### 1.2. 인증키 생성 : Generating A Private Key For Auth  
 1. 프로파일 아이콘 > 설정(Settings)  
-    ![img_1.png](./images/cicd/img_1.png)  
+    ![img_1.png](/assets/images/cicd/img_1.png)  
 2. 왼쪽 창 : Developer Settings > GitHub Apps  
-    ![img_2.png](./images/cicd/img_2.png)  
+    ![img_2.png](/assets/images/cicd/img_2.png)  
 3. Create GitHub App 과정에서 생성한 App 옆의 Edit 클릭   
-    ![img_11.png](./images/cicd/img_11.png)  
+    ![img_11.png](/assets/images/cicd/img_11.png)  
 4. Generate a private key를 선택   
-    ![img_10.png](./images/cicd/img_10.png)  
+    ![img_10.png](/assets/images/cicd/img_10.png)  
 5. 키 변환(for jenkins)  
     generate a private key 선택 시 파일을 다운로드 함.
     이 파일을 잘 보관하자.
@@ -128,22 +128,22 @@ GitHub - Jenkins 간 연동을 위한 설정에 대해서 설명한다.
     ```
 ### 1.3. 사용 설정 : Install  
 1. 프로파일 아이콘 > 설정(Settings)  
-    ![img_1.png](./images/cicd/img_1.png)  
+    ![img_1.png](/assets/images/cicd/img_1.png)  
 2. 왼쪽 창 : Developer Settings > GitHub Apps  
-    ![img_2.png](./images/cicd/img_2.png)  
+    ![img_2.png](/assets/images/cicd/img_2.png)  
 3. Create GitHub App 과정에서 생성한 App 옆의 Edit 클릭   
-    ![img_11.png](./images/cicd/img_11.png)
+    ![img_11.png](/assets/images/cicd/img_11.png)
 4. Install App 선택  
-    ![img_12.png](./images/cicd/img_12.png)  
+    ![img_12.png](/assets/images/cicd/img_12.png)  
 5. 설치할 곳 선택  
-    ![img_13.png](./images/cicd/img_13.png)    
+    ![img_13.png](/assets/images/cicd/img_13.png)    
 6. 연동할 저장소 선택  
-   ![img_14.png](./images/cicd/img_14.png)  
+   ![img_14.png](/assets/images/cicd/img_14.png)  
 
 ### 1.4. 인증(계정) 추가 : In Jenkins  
 **준비물**  
 1. GitHub App About 정보 기록  
-    ![img_16.png](./images/cicd/img_16.png)  
+    ![img_16.png](/assets/images/cicd/img_16.png)  
 2. 인증 키  
     openssl을 이용해 변환한 키 데이터  
     ```shell
@@ -152,9 +152,9 @@ GitHub - Jenkins 간 연동을 위한 설정에 대해서 설명한다.
 
 **젠킨스 접속**  
 1. Jenkins 관리 > Security > Manage Credentials  
-    ![img_15.png](./images/cicd/img_15.png)  
+    ![img_15.png](/assets/images/cicd/img_15.png)  
 2. 화면 상에서 (global) 클릭  
-    ![img_17.png](./images/cicd/img_17.png)  
+    ![img_17.png](/assets/images/cicd/img_17.png)  
 3. 우측 상단의 Add Credentials 선택  
     * Kind : GitHubApp  
     * ID : 젠킨스에서 사용할 인증 이름(ex : github app name('-' 사용불가))
@@ -173,19 +173,19 @@ Jenkins Project(Item) 생성과 Pipeline 설정에 대해서 설명한다.
 ### 2.1. Create Project
 
 1. 새로운 Item  
-    ![img_18.png](./images/cicd/img_18.png)  
+    ![img_18.png](/assets/images/cicd/img_18.png)  
 2. 이름을 입력, Multibranch Pipeline 선택 > OK  
     레퍼런스가 있는 경우 'Copy from' 을 이용 ( 이 부분은 나중에 작성 )   
-    ![img_19.png](./images/cicd/img_19.png)  
+    ![img_19.png](/assets/images/cicd/img_19.png)  
 3. Name, Description 입력  
 4. Branch Sources > GitHub 선택   
-    ![img_25.png](./images/cicd/img_25.png)  
+    ![img_25.png](/assets/images/cicd/img_25.png)  
 5. Credentials > 이 전 단계에서 추가한 인증(ex : JB CI/CD )  
 6. Repository HTTPS URL > CI/CD를 구성 할 github 저장소 
     주의 : GitHub App과 Repository가 연결되어 있어야 한다.  
     [참조. GitHub App과 Repository 연결](##-Appendix-1.-GitHub-App-과-Repository-연결)
 7. Behaviours 의 선택  
-    ![img_30.png](./images/cicd/img_30.png)  
+    ![img_30.png](/assets/images/cicd/img_30.png)  
     * Exclude branches that are also filed as PRs  
        PR 후 PR을 한 브랜치를 제외(PR 후 변화가 없는 브랜치를 Disable 상태로 처리)  
     * Only branches that are also filed as PRs  
@@ -194,11 +194,11 @@ Jenkins Project(Item) 생성과 Pipeline 설정에 대해서 설명한다.
     * All branches 
 8. Submodule 설정  
     패스  
-    ![img_32.png](./images/cicd/img_32.png)  
+    ![img_32.png](/assets/images/cicd/img_32.png)  
 9. 빌드 기록 관리  
     * 기능을 활성화 하는 경우 기본적으로 브랜치 삭제 시 젠킨스 기록도 함께 삭제  
     * 브랜치 삭제에 상관없이 빌드 기록을 볼 수 있도록 보관 규칙(보관일과 최대 보관 수)을 설정  
-    ![img_31.png](./images/cicd/img_31.png)  
+    ![img_31.png](/assets/images/cicd/img_31.png)  
 10. 기타...
     패스  
 11. 생성  
@@ -211,10 +211,10 @@ Jenkins Project(Item) 생성과 Pipeline 설정에 대해서 설명한다.
   * Dockerfile(Cache Enable)  
 
 1. 저장소 생성  
-![img_33.png](./images/cicd/img_33.png)  
+![img_33.png](/assets/images/cicd/img_33.png)  
 2. App 연결  
 profile > settings > application > app(configure) > Repository Access > New Repository  
-![img_34.png](./images/cicd/img_34.png)  
+![img_34.png](/assets/images/cicd/img_34.png)  
 
 3. Dockerfile
    
@@ -222,9 +222,9 @@ profile > settings > application > app(configure) > Repository Access > New Repo
 
 ## Appendix 1. GitHub App 과 Repository 연결  
 1. 프로파일 아이콘 > 설정(Settings)  
-   ![img_1.png](./images/cicd/img_1.png)  
+   ![img_1.png](/assets/images/cicd/img_1.png)  
 2. 왼쪽창에서 Application 선택  
-    ![img_20.png](./images/cicd/img_20.png)  
+    ![img_20.png](/assets/images/cicd/img_20.png)  
 3. App 우측의 Configure 선택  
-    ![img_21.png](./images/cicd/img_21.png)  
+    ![img_21.png](/assets/images/cicd/img_21.png)  
 4. Repository 추가 > Save  
