--- a/_posts/_drafts/2024-02-29-log4j-error-01.md
+++ b/_posts/_drafts/2024-02-29-log4j-error-01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "log4j2 : WARN StatusConsoleListener "
+title: log4j2 : WARN StatusConsoleListener 
 author: jblim0125
 date: 2024-02-29
 category: 2024
