--- a/_posts/_drafts/2024-04-16-fabric.md
+++ b/_posts/_drafts/2024-04-16-fabric.md
@@ -7,9 +7,13 @@
 
 ## 할 일
 
-1. UI중심의 보고와 이월된 기능에 대한 개발 진행 내용 준비  
-2. 데이터 셋 준비  
-   티맥스, 단국대 연동 준비
+- 추적표 작성  
+- 착수보고자료 업데이트  
+- WBS 작성  
+  - WBS 현실화(서, 고)
+- 기능명세 + 소프트웨어 설계 작성  
+
+### 플랫폼팀 업무  
 
 ## 메모  
 
@@ -22,31 +26,27 @@
    서버 별, VM 별, 서비스(프로젝트) 별 CPU, MEM, Disk, Network 사용량  
    *) 사내 서버실 정보를 바탕으로 수행해도 될 것으로 예상 - 다만 몇가지 데이터 수집을 위한 작업은 필요  
 
-- 대전교통공사 데이터 셋 - 작년 샘플 데이터셋 + 데이터 추가 확보하여 활용  
-   역사정보  
-   열차시각표  
-   승차권이용현황  
-   대전시 인구 대비 교통약자 비율  
-   교통약자 유형별 도시철도 이용현황  
-   대전시 구/동 별 세대 및 분기별 인구  
-   시도별 인구와 증감률  
-   대전시 구/동 별 인구와 증감률  
-   노선별_이용차량__통행료수입_월별_증감증감률  
-   권역별 대중교통과 승용차 속도비교  
-   시도별 연도별 대중교통이용횟수_1주간 평균 대중교통 이용횟수  
-   시도별 연도별 환승소요시간  
-   대전 열차시각표 20220921 버전  
-   대전교통공사 열차 혼잡도 분석 2023.10.31 버전  
-   대전교통공사 열차 혼잡도 분석 2020.01 ~ 2022.02 버전  
-   대전교통공사 열차 혼잡도 분석 2020.01 ~ 2021.12 버전  
-   대전교통공사 열차 혼잡도 분석 2020.01 ~ 2020.5 버전  
-   대전교통공사 열차 혼잡도 분석 2019.01 ~ 12 버전  
-   대전교통공사 열차 혼잡도 분석 2018.01 ~ 12 버전  
-   대전광역시 각종 통계지표 연도별 2014 ~ 2022  
-   대전 도시철도 혼잡도 - 최고치  
-   대전 도시철도 승차권종류별  통행량 패턴 - 하차역기준  
-   대전시 구별 동별 분기별 세대수 및 인구  
-   대전 도시철도 월별 요일별 교통카드종류별 통행량 - 승차,하차  
-   대전 도시철도 일별 시간대별통행량 개집표기 기준 통행량  
-   대전 도시철도 역번호와 역이름  
-   대전 도시철도 일별 승차권종류별 통행량 집계  
+- 대전교통공사  
+  - 구글시트를 이용해 대전교통공사에서 데이터 전달 예정  
+  - 원하는 실증 컨셉에 대한 내용은 전달 받음  
+
+
+
+
+## 06-19 기획회의
+
+- 거버넌스
+  - 관리자, 일반 사용자 2가지 분류의 룰과 그에 기반한 정책을 사용
+  - 도메인을 이용해 리소스 분리 사용  
+  - 용어사전
+
+
+### 확인해야 할 부분
+
+카테고리는 tag와 prefix를 이용해 구현한다.
+   * 카테고리는 기본적으로 분류없음을 가진다.
+
+모니터링에서
+   데이터 조회수를 추천수로 변경
+   히스토리에서 데이터 등록/수정과 관련된 내용 삭제
+   연결 상태와 관련된 내용만을 수집 저장
