워드클라우드 이미지 경로 변경

--- a/_posts/2024-11-24-워드크라우딩.md
+++ b/_posts/2024-11-24-워드크라우딩.md
@@ -45,11 +45,7 @@ pd.Series([0,2,-4,6]).plot(title="한글", figsize=(12, 2))
     <Axes: title={'center': '한글'}>
 
 
-
-
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_2_2.png)
-    
+![png](/assets/images/word_cloud/image.png)
 
 
 ## 텍스트 데이터 수집 및 저장
@@ -804,12 +800,7 @@ data['Score'].hist()
     <Axes: >
 
 
-
-
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_25_2.png)
-    
-
+![png](/assets/images/word_cloud/image-1.png)
 
 
 ```python
@@ -1087,9 +1078,7 @@ pos.plot(30)
 
 
 
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_38_1.png)
-    
+![png](/assets/images/word_cloud/image-2.png)    
 
 
 
@@ -1105,10 +1094,7 @@ neg.plot(30)
 
 
 
-
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_39_1.png)
-    
+![png](/assets/images/word_cloud/image-3.png)
 
 
 ## 분석 결과 시각화
@@ -1173,10 +1159,7 @@ plt.axis('off')
 
 
 
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_41_2.png)
-    
-
+![png](/assets/images/word_cloud/image-4.png)    
 
 ### 배경 이미지 마스킹 처리
 
@@ -1234,10 +1217,7 @@ plt.axis('off')
 
 
 
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_45_1.png)
-    
-
+![png](/assets/images/word_cloud/image-5.png)    
 
 
 ```python
@@ -1282,10 +1262,7 @@ plt.axis('off')
 
 
 
-
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_47_1.png)
-    
+![png](/assets/images/word_cloud/image-6.png)
 
 
 
@@ -1318,7 +1295,4 @@ plt.axis('off')
 
 
 
-    
-![png](2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_files/2024-11-24-%E1%84%8B%E1%85%AF%E1%84%83%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%AE%E1%84%83%E1%85%B5%E1%86%BC_48_1.png)
-    
-
+![png](/assets/images/word_cloud/image-7.png)
